	  include config.h in edns.c, have socket compare use correct
	  signedness, add -u repo option to makewin.sh, fix quoting in
	  makewin.sh and check return value of bind and connect in net.c
	  for failure instead of a socket type. And fix to install .exe files.
	  Fix to compile with OpenSSL 3.2. Update acx_nlnetlabs.m4 to 48.

1.8.3	2022-08-15
	* bugfix #183: Assertion failure with OPT record without rdata.
	  This caused packet creation with only a DO bit (for DNSSEC OK)
	  to crash. Thanks Anand Buddhdev and others for reporting this
	  so quickly.
	* Fix for syntax error in pyldns

1.8.2	2022-08-12
	* bugfix #147: Allow for tabs in whitespace before quoted rdata
	  fields. Thanks Felipe Gasper
	* bugfix #149: Add some missing [out] annotations to doxygen
	  parameters. Thanks aldot.
	* Fix build error on Solaris 10 with inet_ntop redeclaration error.
	* Fix -U flag with ldns-signzone. Thanks Ulrich and Jonathan
	* Enable compile of SVCB and HTTPS support by default.
	* bugfix #179: Free line memory even if zone file parsing fails
	  Thanks Claudius Zingerli
	* bugfix #166: Grow buffer when writing chars and fixed size
	  strings when converting to presentation format, preventing
	  potential assersion errors.
	* bugfix #46: Print network errors when secure tracing.
	  Thanks reedjc
	* EDNS0 Option handling and conversion into presentation format.
	* bugfix #145: ldns-verify-zone should not call occluded records
	  glue. Thanks Habbie

1.8.1	2021-12-03
	* bugfix #146: ldns-1.7.1 had soname 3.0, so ldns-1.8.x soname
	  needs to larger. Thanks Leah Neukirchen & Felipe Gasper
	* Undo PR#123 fix ldns.pc installation when building out-of-source
	  Thanks Axel Xu

1.8.0	2021-11-26
	* bugfix #38: Print "line" before line number when printing
	  zone parse errors. Thanks Petr Špaček.
	* bugfix: Revert unused variables in ldns-config removal patch.
	* bugfix #50: heap Out-of-bound Read vulnerability in
	  rr_frm_str_internal reported by pokerfacett.